added bootstrap and added a README

--- a/thilos_website/templates/base.html
+++ b/thilos_website/templates/base.html
@@ -1,4 +1,4 @@
-{% load static wagtailuserbar %}
+{% load static wagtailuserbar compress %}
 
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -19,6 +19,9 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/thilos_website.css' %}">
+        {% compress css %}
+            <link type="text/x-scss" href="{% static 'theme.scss' %}" rel="stylesheet" media="screen">
+        {% endcompress %}
 
         {% block extra_css %}
             {# Override this in templates to add extra stylesheets #}
