installed django debug toolbar

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,6 +9,13 @@
 
 {% block content %}
 
-    <h1>Hello World</h1>
+    <div class="container">
+        <div class="row align-items-center">
+            <h1> Travel </h1>
+        </div>
+        <div class="row">
+            <h1> Business </h1>
+        </div>
+    </div>
 
 {% endblock content %}
