--- a/thilos_website/templates/base.html
+++ b/thilos_website/templates/base.html
@@ -35,6 +35,8 @@
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/thilos_website.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
