fixed django debug toolbar and played a bit with bootstrap theme
removed generated css from repo

--- a/thilos_website/static/theme.scss
+++ b/thilos_website/static/theme.scss
@@ -1,3 +1,9 @@
+// variables can be overwritten after function import and before the rest gets imported
+@import './bootstrap/functions';
 $primary: red;
 
+@import './bootstrap/variables';
+$body-bg: $gray-800;
+@import './bootstrap/utilities';
+  
 @import './bootstrap/bootstrap';
