--- a/thilos_website/templates/home/home_page.html
+++ b/thilos_website/templates/home/home_page.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
-{% load static %}
 
 {% block body_class %}template-homepage{% endblock %}
 
@@ -10,8 +9,14 @@
 
 {% block content %}
 
-    {% for block in page.content %}
-        {% include_block block %}
-    {% endfor %}
-
+<div class="container vh-100 bg-light">
+    <div class="p-3">
+        <h1 class="text-center">{{self.title}}</h1>
+    </div>
+    <div class="row">
+            {% for block in page.content %}
+                    {% include_block block %}
+            {% endfor %}
+    </div>
+</div>
 {% endblock content %}
