--- a/thilos_website/templates/basic_page.html
+++ b/thilos_website/templates/basic_page.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 
-{% block content %} 
-<div class="container min-vh-100 bg-light shadow-lg">
-    {% block canvas %}{% endblock %}
+{% block content %}
+<div class="min-vh-100 full-height bg-light">
+    <div class="container bg-light shadow-lg">
+        {% block canvas %}{% endblock %}
+    </div>
 </div>
 {% endblock %}
