worked on home page

--- a/thilos_website/templates/basic_page.html
+++ b/thilos_website/templates/basic_page.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="min-vh-100 full-height bg-light">
+<div class="min-vh-100 full-height bg-white">
     <div class="container bg-light shadow-lg">
         {% block canvas %}{% endblock %}
     </div>
