--- a/thilos_website/static/theme.scss
+++ b/thilos_website/static/theme.scss
@@ -37,9 +37,29 @@ $enable-shadows: true;
     box-shadow: 0 1rem 3rem rgba($white, .175);;
 }
 
-.full-height {
-    height: 100%;
-    min-height: 100%;
+.banner{
+    .banner-content{
+      position: absolute;
+      top: 50px;
+      width: 100%;
+    }
+    img{
+      width: 100%;
+      height: auto;
+    }
+    span{
+      font-size: $bannerHeading;
+      display: block;
+      text-transform: uppercase;
+      font-weight: bold;
+      @include mQ(3000px, 1200px){
+        font-size: 68px;
+      }
+    }
+    span.sub-title{
+      font-weight: normal;
+      margin-bottom: 30px;
+    }
 }
 
 $utilities: map-merge(
