--- a/thilos_website/templates/home/home_page.html
+++ b/thilos_website/templates/home/home_page.html
@@ -6,15 +6,11 @@
 {% block content %}
 
 <div class="container-fluid bg-black min-vh-100">
-
-<div class="p-3">
-    <h1 class="text-center">{{self.title}}</h1>
-</div>
-<div class="row">
-    {% for block in page.content %}
+    <div class="container-sm px-0">
+        {% for block in page.content %}
             {% include_block block %}
-    {% endfor %}
-</div>
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock content %}
