--- a/thilos_website/templates/streams/subject_block.html
+++ b/thilos_website/templates/streams/subject_block.html
@@ -1,13 +1,20 @@
 {% load wagtailimages_tags %}
 
-{% image self.image fill-1320x400 as img %}
+{% image self.image fill-1320x500 as img %}
 
-<div class="px-0 pt-5">
-    <img src="{{ img.url }}" alt="{{ img.alt }}" loading="lazy" class="img-fluid">
-    <div class="bg-light">
-        <h1>{{ self.title }}</h1>
+<div class="px-0 mx-0 my-5 subject-block position-relative shadow-lg">
+    <img src="{{ img.url }}" alt="{{ img.alt }}" loading="lazy">
+    <div id="canvas" class="p-3 bg-light bg-opacity-75 text-dark position-absolute shadow-lg">
+        <span id="title" class="d-block text-uppercase fw-bold text-center text-nowrap">{{ self.title }}</span>
+        <span id="subtitle" class="d-block fs-3 text-wrap text-center">{{ self.subtitle }}</span>
     </div>
-
+    <div id="cta">
+      {% if self.button_page %}
+          <a href="{{ self.button_page.url }}" class="btn btn-primary btn-lg">
+              Read More
+          </a>
+      {% endif %}
+    </div>
 </div>
 
 <!--
