--- a/thilos_website/templates/home/home_page.html
+++ b/thilos_website/templates/home/home_page.html
@@ -5,12 +5,10 @@
 
 {% block content %}
 
-<div class="container-fluid bg-black min-vh-100">
-    <div class="container-sm px-0">
-        {% for block in page.content %}
-            {% include_block block %}
-        {% endfor %}
-    </div>
+<div class="container">
+    {% for block in page.content %}
+        {% include_block block %}
+    {% endfor %}
 </div>
 
 {% endblock content %}
