--- a/thilos_website/templates/home/home_page.html
+++ b/thilos_website/templates/home/home_page.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container-sm px-0">
     {% for block in page.content %}
         {% include_block block %}
     {% endfor %}
