--- a/thilos_website/templates/blog/blog_index.html
+++ b/thilos_website/templates/blog/blog_index.html
@@ -1,1 +1,26 @@
 {% extends "basic_page.html" %}
+{% load wagtailimages_tags %}
+
+{% block canvas %}
+
+    <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold"> {{ self.custom_title }}</h1>
+        <p class="col-md-8 fs-4">{{ self.description }}</p>
+    </div>
+
+    {% for post in posts %}
+            <div class="row py-3 px-0">
+                <div class="col-lg">
+                    {% image post.thumbnail fill-1000x500 as blog_img %}
+                    <a href="{{ post.url }}">
+                        <img src="{{ blog_img.url }}" alt="{{ blog_img.alt }}" class="img-fluid">
+                    </a>
+                </div>
+                <div class="col-lg">
+                    <h1>{{ post.custom_title }}</h1>
+                    <p class="fs-5">{{ post.summary }}</p>
+                    <a href="{{ post.url }}" class="btn btn-primary mt-4">Read More</a>
+                </div>
+            </div>
+    {% endfor %}
+{% endblock %}
