--- a/thilos_website/templates/streams/blog_item_block.html
+++ b/thilos_website/templates/streams/blog_item_block.html
@@ -10,7 +10,7 @@
             {{ self.content }}
         </div>
         <div class="col-lg-6 col-xl-8">
-            <img src="{{ img.url }}" alt="{{ img.alt }}" class="img-fluid" />
+            <img src="{{ img.url }}" alt="{{ img.alt }}" class="img-fluid img-center" />
         </div>
     </div>
 </div>
