--- a/thilos_website/templates/streams/subject_block.html
+++ b/thilos_website/templates/streams/subject_block.html
@@ -2,7 +2,7 @@
 
 {% image self.image fill-1320x500 as img %}
 
-<div class="px-0 mx-0 my-5 subject-block position-relative shadow-lg">
+<div class="my-5 subject-block position-relative shadow-lg">
     <img src="{{ img.url }}" alt="{{ img.alt }}" loading="lazy">
     <div id="canvas" class="p-3 bg-light bg-opacity-75 text-dark position-absolute shadow-lg">
         <span id="title" class="d-block text-uppercase fw-bold text-center text-nowrap">{{ self.title }}</span>
