--- a/thilos_website/templates/blog/blog_post.html
+++ b/thilos_website/templates/blog/blog_post.html
@@ -1,9 +1,9 @@
 {% extends "basic_page.html" %}
 {% load wagtailcore_tags %}
 
-{% block canvas %}
+{% block content %}
 
-<div class="p-3">
+<div class="container bg-light shadow py-3">
     <h1 class="text-center">{{self.title}}</h1>
 </div>
 
