production setting runs without nginx locally

--- a/app/thilos_website/static/theme.scss
+++ b/app/thilos_website/static/theme.scss
@@ -40,7 +40,7 @@ $btn-padding-x-lg: 30px;
 // utility API
 @import "./bootstrap/utilities/api";
 
-@import "./bootstrap/bootstrap.scss";
+// @import "./bootstrap/bootstrap.scss";
 
 // Custom code
 
