--- a/app/thilos_website/static/theme.scss
+++ b/app/thilos_website/static/theme.scss
@@ -18,7 +18,7 @@ $breadcrumb-divider-color: $gray-300;
 $breadcrumb-active-color: $gray-300;
 
 //buttons
-$btn-box-shadow: inset 0 1px 0 rgba($white, .15), 0 5px 5px rgba($black, .75);
+$btn-box-shadow: inset 0 1px 0 rgba($white, .15), 0 2px 2px rgba($black, .5);
 
 $btn-padding-y-lg: 20px;
 $btn-padding-x-lg: 30px;
@@ -36,6 +36,7 @@ $btn-padding-x-lg: 30px;
 @import "./bootstrap/grid";
 @import "./bootstrap/helpers";
 @import "./bootstrap/buttons";
+@import "./bootstrap/breadcrumb";
 
 // utility API
 @import "./bootstrap/utilities/api";
