added carousel to them

--- a/app/thilos_website/static/theme.scss
+++ b/app/thilos_website/static/theme.scss
@@ -37,6 +37,7 @@ $btn-padding-x-lg: 30px;
 @import "./bootstrap/helpers";
 @import "./bootstrap/buttons";
 @import "./bootstrap/breadcrumb";
+@import "./bootstrap/carousel";
 
 // utility API
 @import "./bootstrap/utilities/api";
