fixed bug in blog index

--- a/app/thilos_website/templates/blog/blog_index.html
+++ b/app/thilos_website/templates/blog/blog_index.html
@@ -10,7 +10,7 @@
     </div>
     </div>
 
-    {% for post in posts %}
+    {% for post in self.get_children.specific %}
     <div class="container bg-light shadow-lg my-5 py-3">
         <div class="row py-3 px-0 justify-content-evenly align-items-center">
             <div class="col-lg-6 px-4">
